# CorrelationVector-Cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
CorrelationVector/: CMakeLists.txt
CorrelationVector/cmake/: CVHelpers.cmake  CVOptions.cmake  correlation_vector-config.in.cmake
CorrelationVector/include/: CorrelationVector.h  Guid.h  InternalErrors.h  SpinParameters.h  Utilities.h  export.h
CorrelationVector/include/correlation_vector/: correlation_vector.h  guid.h  spin_parameters.h
CorrelationVector/priv_include/: utilities.h
CorrelationVector/src/: CMakeLists.txt  CorrelationVector.cpp  Guid.cpp  InternalErrors.cpp  SpinParameters.cpp  correlation_vector.cpp  guid.cpp  utilities.h
CorrelationVector/test/: CorrelationVectorTests.cpp
CorrelationVector/tests/: CMakeLists.txt  CorrelationVectorTests.cpp
